k8s-cluster-configuration/platform/core/a2w-codex-terraform/configs/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: a2w-codex-terraform
  labels:
    app: a2w-codex-terraform
