k8s-cluster-configuration/platform/core/a2w-codex-terraform/configs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: a2w-codex-terraform
  namespace: a2w-codex-terraform
spec:
  selector:
    app: a2w-codex-terraform
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
