k8s-cluster-configuration/platform/core/a2w-codex-terraform/configs/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: a2w-codex-terraform-gateway
  namespace: a2w-codex-terraform
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "infra.codex.k6nis.dev"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: infra.codex.k6nis.dev
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: a2w-codex-terraform-tls
      allowedRoutes:
        namespaces:
          from: Same
