k8s-cluster-configuration/platform/core/a2w-codex-terraform/configs/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: a2w-codex-terraform
  namespace: a2w-codex-terraform
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: a2w-codex-terraform-gateway
      namespace: a2w-codex-terraform
  hostnames:
    - infra.codex.k6nis.dev
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: a2w-codex-terraform
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
